--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,10 @@ html{
    justify-content: space-between;
 }
 
+.center{
+   align-items: center;
+}
+
 .hidden{
    overflow-y: hidden;
 }
@@ -54,86 +58,38 @@ img{
    border-radius: 50%;
 }
 
-/* ----- DEBUG ----- */
-
-
-
-
-
+a:hover, i:hover{
+   color: white;
+}
 
 /* ----- ASIDE ----- */
 aside{
    background-color: #000000;
-   padding: 1rem;
    min-height: 40rem;
-}
-
-aside span{
-   display: inline-block;
+   width: 4rem;
 }
 
 #aside-top{
-   height: calc(100% - 6rem);
+   height: calc(100% - 7rem);
 }
 
-#logo{
-   width: 70%;
-   padding-bottom: 2rem;
+#aside-top > div,#aside-bottom{
+   padding: 1rem;
 }
 
-#menu-ab div{
+#playlist, aside span, aside h4, hr, #logo{
+   display: none;
+}
+
+#aside-bottom a{
    height: 2rem;
-   width: 100%;
-   margin-bottom: 1rem;
-}
-
-.menu-icon{
-   height: 100%;
-   width: auto;
-   vertical-align: middle;
-}
-
-#menu-ab span{
-   display: inline-block;
-   vertical-align: middle;
-}
-
-/* ----- PLAYLIST ----- */
-
-#playlist h4{
-   padding: 1rem 0;
-}
-
-#playlist ul{
-   max-height: 200px;
-   overflow-y: scroll;
-}
-
-#plus{
-   height: 2.5rem;
-   width: 2.5rem;
-   font-size: 2rem;
-   font-weight: bold;
-   text-align: center;
-   color: black;
-   background-color: #A3A3A3;
-   display: inline-block;
-}
-
-#playlist li{
    padding: 0.5rem 0;
+   display: inline-block;
 }
 
-#aside-bottom{
- 
-}
-
-#aside-bottom div{
-   height: 2rem;
-}
-
-.download{
-   height: 50%;
+#aside-bottom .download{
+   width: 2rem;
+   display: inline-block;
 }
 
 #aside-bottom .rounded{
@@ -141,16 +97,6 @@ aside span{
    height: 2rem;
    width: 2rem;
 }
-
-/* ----- ASIDE-SMALL ----- */
-
-#aside-small{
-   width: 4rem;
-}
-
-
-
-
 
 /* ----- MAIN ----- */
 
@@ -192,6 +138,10 @@ main{
    padding: 1rem;
 }
 
+u{
+   text-decoration-color: yellowgreen;
+}
+
 /* ----- SECTION ----- */
 
 section{
@@ -223,8 +173,31 @@ section p{
    margin-bottom: 2rem;
 }
 
+.over{
+   position: relative;
+}
 
+.overlay{
+   display: none;
+   position: absolute;
+   top: 0;
+   right: 0;
+   height: 100%;
+   width: 100%;
+   background-color: rgba(0, 0, 0, 0.5);
+}
 
+.overlay .fa-circle-play{
+   font-size: 5rem;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+}
+
+.over:hover .overlay{
+   display: inline-block;
+}
 
 /* ----- FOOTER ----- */
 
@@ -233,24 +206,52 @@ footer{
    height: 8rem;
 }
 
-
 footer div {
-   color: orange;
-   height: 100%;
-   width: 150px;
-   border: dashed 2px white;
    padding: 0.5rem;
- }
-
-
-
-#footer-left image{
-   width: 30%;
 }
 
+#footer-left{
+   width: 13rem;
+   height: 5rem;
+}
 
+#footer-left img{
+   width: 3rem;
+}
 
+#footer-left h5{
+   width: 7.5rem;
+}
 
+#footer-center{
+   width: 50%;
+   align-items: center;
+}
+
+.bottoni{
+   width: 21rem;
+   text-align: center;
+}
+
+footer .bottoni i{
+   font-size: 1.5rem;
+}
+
+footer .bottoni .fa-circle-play{
+   font-size: 2.5rem;
+}
+
+input{
+   width: 50%;
+}
+
+#footer-right{
+   width: 15rem;
+}
+
+#footer-right i{
+   padding: 3px;
+}
 
 
 /* ----- SCHERMI S ----- */
@@ -260,15 +261,95 @@ footer div {
    aside{
       width: 16rem;
    }
+
+   aside span, aside h4{
+      display: inline-block;
+   }
+      
+   #logo{
+      display: inline-block;
+      width: 70%;
+      padding-bottom: 2rem;
+   }
+
+   #logo-small{
+      display: none;
+   }
    
+   #aside-top {
+      height: calc(100% - 6rem);
+    }
+
+   /* ----- MENU-AB ----- */
+   
+   #aside-top #menu-ab{
+      padding: 0;
+   }
+   
+   #menu-ab a, #aside a{
+      height: 2rem;
+      width: 80%;
+      margin-bottom: 1rem;
+      display: inline-block;
+   }
+   
+   #menu-ab a:first-child{
+      border-left: solid 1px greenyellow;
+   }
+   
+   .menu-icon{
+      height: 100%;
+      width: auto;
+      vertical-align: middle;
+      padding-left: 1rem;
+   }
+   
+   #menu-ab span, #aside-bottom span, #aside-bottom h4{
+      display: inline-block;
+      vertical-align: middle;
+   }
+
+   #aside-bottom .menu-icon{
+      padding: 0;
+   }
+   
+   /* ----- PLAYLIST ----- */
+
+   #playlist{
+      display: flex;
+   }
+   
+   #playlist h4{
+      padding-bottom: 1rem;
+   }
+   
+   #playlist ul{
+      max-height: 200px;
+      overflow-y: scroll;
+   }
+   
+   #plus{
+      height: 2.5rem;
+      width: 2.5rem;
+      font-size: 2rem;
+      font-weight: bold;
+      text-align: center;
+      color: black;
+      background-color: #A3A3A3;
+      display: inline-block;
+   }
+   
+   #playlist li{
+      padding: 0.5rem 0;
+   }
+
+   hr{
+      display: block;
+   }
+  
    .content, .cta{
       width: calc(100% - 16rem);
    }
-
-   
-
-
-
 }
 
 /* ----- SCHERMI MD ----- */
@@ -277,7 +358,6 @@ footer div {
    section .album{
       width: calc(100% / 4 - 0.5rem);  
    }
-
 }
 
 /* ----- SCHERMI LG ----- */
@@ -286,6 +366,4 @@ footer div {
    section .album{
       width: calc(100% / 6 - 0.5rem);  
    }
-
-
 }
