--- a/css/style.css
+++ b/css/style.css
@@ -58,8 +58,14 @@ img{
    border-radius: 50%;
 }
 
-a:hover, i:hover{
+a:hover, i:hover, a span:hover{
    color: white;
+}
+
+.scale:hover{
+   transform: scale(1.2) ;
+   transition: transform 0.3;
+   z-index: 2;
 }
 
 /* ----- ASIDE ----- */
@@ -211,7 +217,7 @@ footer div {
 }
 
 #footer-left{
-   width: 13rem;
+   width: 16rem;
    height: 5rem;
 }
 
@@ -241,12 +247,71 @@ footer .bottoni .fa-circle-play{
    font-size: 2.5rem;
 }
 
+.footer-slider{
+   width: 90%;
+}
+
+.footer-slider .f-bianco{
+   width: 10%;
+   text-align: center;
+}
+
+.slider{
+   width: 80%;
+   display: inline-block;
+   background-color: #5A5A5A;
+   height: 0.5rem;
+   border-radius: 0.5rem;
+   margin: 0 0.5rem;
+   position: relative;
+   padding: 0;
+}
+
+.timing{
+   position: absolute;
+   top: 0;
+   left: 0;
+   bottom: 0;
+   right: 80%;
+   background-color: #929292;
+   padding: 0;
+   border-radius: 0.5rem;
+
+}
+
+.point{
+   background-color: white;
+   height: 8px;
+   width: 8px;
+   border-radius: 8px;
+   position: absolute;
+   top: -3px;
+   right: 0;
+   display: none;
+}
+
+#footer-right .slider{
+   width: 60%;
+}
+
+.slider:hover .point{
+   display: block;
+}
+
+.slider:hover .timing{
+   background-color: greenyellow;
+}
+
 input{
    width: 50%;
 }
 
 #footer-right{
-   width: 15rem;
+   width: 18rem;
+}
+
+.footer-right-icon{
+   width: 8rem;
 }
 
 #footer-right i{
